# ComfyUI-jhj-Kokoro-Onnx

./: README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-comfyui-registry.yml
examples/: Kokoro Onnx TTS.json
modules/kokoro/: istftnet.py  kokoro_inferencer.py  model_downloader.py  models.py  plbert.py
modules/tokenizer/: normalizer.py  tokenizer.py
